<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="32dp"
    tools:context=".ForgetPasswordActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_text"
        android:padding="16dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/password_reset_imageview"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/forgot_password"
        android:padding="20dp"
        android:src="@drawable/lock"
        app:layout_constraintBottom_toTopOf="@id/password_forgot_textview" />

    <TextView
        android:id="@+id/password_forgot_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/forget_password"
        android:textColor="@color/clr_black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/password_forgot_text_textview" />

    <TextView
        android:id="@+id/password_forgot_text_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/forget_password_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_email" />

    <LinearLayout
        android:id="@+id/linear_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/send_code_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/label_email"
            android:textColor="@color/clr_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_input"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_btn"
        android:text="@string/send_code"
        android:textAllCaps="false"
        android:textColor="@color/clr_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>