<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_text"
        android:padding="16dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/label_login"
        android:textColor="@color/clr_black"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@id/textview_login_intro"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textview_login_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/login_intro_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_email"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter_medium"
            android:labelFor="@id/email_edittext"
            android:text="@string/label_email"
            android:textColor="@color/clr_black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/forgot_password_textview">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter_medium"
            android:labelFor="@id/password_edittext"
            android:text="@string/label_password"
            android:textColor="@color/clr_black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/red_eye"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxWidth="420dp"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/forget_password"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_btn"
        android:letterSpacing=".05"
        android:maxWidth="320dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/label_login"
        android:textAllCaps="false"
        android:textColor="@color/clr_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_separator"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/linear_layout_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_choice">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/clr_black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="2"
            android:text="@string/or_login_with"
            android:textAlignment="center"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/clr_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_bottom_text"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_stroke"
            android:contentDescription="@string/speakable_text_facebook"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/facebook_icon" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_stroke"
            android:contentDescription="@string/speakable_text_google"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/google_icon" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_stroke"
            android:contentDescription="@string/speakable_text_apple"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/apple_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/label_register"
            android:textColor="#2962FF"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>