<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CreateNewPasswordActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/back_text"
        android:padding="14dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textview_create_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_new_password"
        android:textColor="@color/clr_black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back" />

    <TextView
        android:id="@+id/textview_create_new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_new_password_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_create_new_password" />

    <LinearLayout
        android:id="@+id/linear_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textview_create_new_password_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter_medium"
            android:labelFor="@id/forgot_password_textview"
            android:text="@string/new_password"
            android:textColor="@color/clr_black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/red_eye"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter_medium"
            android:labelFor="@id/forgot_password_textview"
            android:text="@string/label_confirm_password"
            android:textColor="@color/clr_black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_confirm_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableEnd="@drawable/red_eye"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_btn"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/clr_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_confirm_password"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>