<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        tools:context=".RegisterActivity">


        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_text"
            android:padding="14dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textview_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/gte_estiprotext_bold"
            android:text="@string/label_register"
            android:textColor="@color/clr_black"
            android:textSize="38sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_back" />

        <TextView
            android:id="@+id/textview_login_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_intro_text"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_register_title" />

        <LinearLayout
            android:id="@+id/linear_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textview_login_intro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter_medium"
                android:labelFor="@id/email_edittext"
                android:text="@string/label_username"
                android:textColor="@color/clr_black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:hint="@string/enter_username"
                android:inputType="textEmailAddress"
                android:paddingStart="24dp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlSymmetry,VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_username">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter_medium"
                android:labelFor="@id/email_edittext"
                android:text="@string/label_email"
                android:textColor="@color/clr_black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingStart="24dp"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlSymmetry,VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_email">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter_medium"
                android:labelFor="@id/forgot_password_textview"
                android:text="@string/label_password"
                android:textColor="@color/clr_black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableEnd="@drawable/red_eye"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_password">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter_medium"
                android:labelFor="@id/forgot_password_textview"
                android:text="@string/label_confirm_password"
                android:textColor="@color/clr_black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_confirm_edittext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableEnd="@drawable/red_eye"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_btn"
            android:text="@string/label_register"
            android:textAllCaps="false"
            android:textColor="@color/clr_white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_confirm_password"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:id="@+id/linear_layout_bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textview_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/label_login"
                android:textColor="#2962FF"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>